.playwright-mcp/console-2026-03-12T22-59-22-573Z.log
[     256ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/:0
[     400ms] Error: Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

> 1 | @tailwind base;
    | ^
  2 | @tailwind components;
  3 | @tailwind utilities;

    at getCssError (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/parseCss.js:24:16)
    at getModuleBuildError (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/webpackModuleError.js:116:43)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:29:49)
    at async (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:27:21)
[     402ms] [ERROR] ./src/app/globals.css:1:1
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

> 1 | @tailwind base;
    | ^
  2 | @tailwind components;
  3 | @tailwind utilities; @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
[     402ms] [ERROR] ./src/app/globals.css
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
-- inner error --
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
Generated code for /Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[2]!/Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[3]!/Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
[     467ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/favicon.ico:0
[   25292ms] [ERROR] WebSocket connection to 'ws://localhost:3000/_next/webpack-hmr' failed: Error in connection establishment: net::ERR_CONNECTION_REFUSED @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/pages/websocket.js:63
[   26295ms] [ERROR] WebSocket connection to 'ws://localhost:3000/_next/webpack-hmr' failed: Error in connection establishment: net::ERR_CONNECTION_REFUSED @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/pages/websocket.js:63
[   30270ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:3000/_next/static/webpack/2255f2d6046885f1.webpack.hot-update.json:0
[   30270ms] [WARNING] [Fast Refresh] performing full reload because your application had an unrecoverable error @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/pages/hot-reloader-client.js:349
[   31214ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:3000/_next/static/webpack/2255f2d6046885f1.webpack.hot-update.json:0
[   31214ms] [WARNING] [Fast Refresh] performing full reload because your application had an unrecoverable error @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/pages/hot-reloader-client.js:349
